# copilot-ci-automation

./: .gitignore  EMAIL_GUIDE.md  README.md  pyproject.toml  sales_data_analysis.py  test_email.py
.github/workflows/: weekly_sales_report.yml
references/: cicd_data.csv
