[tool.poetry]
name = "110301-automation-csv"
version = "0.1.0"
description = "Sales data analysis and report generation automation"
authors = ["hellojin97"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.10.7"
numpy = "^2.3.3"
pandas = "^2.3.3"
python-docx = "^1.2.0"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
